# WebView

./: .gitignore  .gitmodules  CERTIFICATE_INJECTION.md  LICENSE  PRECOMPILED_HEADERS_OPTIMIZATION.md  README.md
WebView2WTL.Sample/: WebViewSolution.sln  logger.h
WebView2WTL.Sample/WebView2/: BOOST_REMOVAL_SUMMARY.md  CommandLineParser.h  CompositionHost.h  ConvertAllLogCalls.ps1  ConvertLogCalls.ps1  Cookie.h  DetectDlg.cpp  DomainDlg.cpp  DomainDlg.h  FINAL_LOG_CONVERSION_INSTRUCTIONS.md  FIX_ALL_LOGS.ps1  MainFrm.cpp  MainFrm.h  RegisterMessages.cpp  RegisterMessages.h  SingleWebView2.h  Thread.cpp  UrlCombo.cpp  Utility.cpp  Utility.h  WebView2.cpp  WebView2.h  WebView2.rc  WebView2.vcxproj  WebView2.vcxproj.filters  WebView2Impl.h  WebView2Impl.h.backup  WebView2Impl2.h  WebView2Main.cpp  WebViewAuthentication.h  WebViewEvents.h  WebViewProfile.cpp  WebViewProfile.h  Wininet.cpp  Wininet.h  framework.h  logger.h  logger_impl.cpp  pch.h  resource.h  (+2 more)
WebView2WTL.Sample/WebView2/Core/: CompositionHost.cpp  CompositionHost.h  SingleWebView2.cpp  SingleWebView2.h  WebView2.cpp  WebView2Impl2.h  WebView2Wnd.h  WebViewDlg.cpp  WebViewDlg.h
WebView2WTL.Sample/WebView2/Logger/: logger.h  logger_impl.cpp
WebView2WTL.Sample/WebView2/Messaging/: RegisterMessages.cpp  RegisterMessages.h
WebView2WTL.Sample/WebView2/Resources/: WebView2.rc  resource.h
WebView2WTL.Sample/WebView2/Security/: CertificateDlg.cpp  CertificateDlg.h  ClientCertificateSelector.cpp  ClientCertificateSelector.h  HttpsDownloader.cpp  HttpsDownloader.h  WebViewAuthentication.h  WinInetCertPreSelector.cpp  WinInetCertPreSelector.h  WinInetHelpers.h
WebView2WTL.Sample/WebView2/UI/: DetectDlg.cpp  ImageListBox.h  LogView.cpp  MainFrm.cpp  MainFrm.h  UrlCombo.cpp
WebView2WTL.Sample/WebView2/Utilities/: CommandLineParser.h  Utility.cpp  Utility.h  WebViewEvents.h  WebViewProfile.cpp  WebViewProfile.h  osutility.cpp  osutility.h
WebView2WTL.Sample/WebView2/documentation/: ARCHITECTURE.md  NAMESPACE_GUIDE.md  SECURITY_REVIEW.md
WebView2WTL.Sample/WebView2/old/: --WebView2Impl2.h.backup
WebView2WTL.Sample/WebView2HttpClient/: CMakeLists.txt  HttpRequest.h  HttpResponse.h  IHttpBackend.h  WebView2HttpClient.cpp  WebView2HttpClient.h  dllmain.cpp  vcpkg.json
WebView2WTL.Sample/WebView2HttpClient/Backend/: CppRestBackend.cpp  CppRestBackend.h  HttpBackendFactory.cpp  HttpBackendFactory.h  WinHttpBackend.cpp  WinHttpBackend.h  WinINetBackend.cpp  WinINetBackend.h
WebView2WTL.Sample/WebView2HttpClient/Benchmark/: HttpBenchmark.cpp  HttpBenchmark.h
WebView2WTL.Sample/WebView2HttpClient/Cookies/: CookieBridge.cpp  CookieBridge.h  CookieStore.cpp  CookieStore.h
WebView2WTL.Sample/WebView2HttpClient/Resilience/: CircuitBreakerPolicy.cpp  CircuitBreakerPolicy.h  FallbackPolicy.cpp  FallbackPolicy.h  IPolicy.h  PolicyExecutor.cpp  PolicyExecutor.h  RateLimiterPolicy.cpp  RateLimiterPolicy.h  RetryPolicy.cpp  RetryPolicy.h  TimeoutPolicy.cpp  TimeoutPolicy.h
WebView2WTL.Sample/WebView2HttpClient/Telemetry/: HttpTelemetry.cpp  HttpTelemetry.h  PerformanceProbe.cpp  PerformanceProbe.h
webapptest/: Program.cs  webapptest.csproj  webapptest.sln
webapptest/Components/: App.razor  _Imports.razor
webapptest/Components/Layout/: NavMenu.razor
webapptest/Components/Pages/: Home.razor
webapptest/Properties/: launchSettings.json
webtest/: package-lock.json  package.json  playwright.config.ts
webtest/tests/: test-1.webview_login.test.ts  webView2Test.ts
